tests/baselines/reference/symbolProperty48.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty48.ts(5,10): error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.


==== tests/cases/conformance/es6/Symbols/symbolProperty48.ts (1 errors) ====
    module M {
        var Symbol;
    
        class C {
            [Symbol.iterator]() { }
             ~~~~~~~~~~~~~~~
!!! error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.
        }
    }